Github Action to use Image ID as a tag on ECR

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -29,6 +29,12 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
     
     - name: Build, push to ECR
+      id: build-image
+      env: 
+        ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
+        ECR_REPO: aws-py-service
+        IMAGE_TAG: ${{github.sha}}
       run: |
-        docker build -t 300889533047.dkr.ecr.eu-west-1.amazonaws.com/aws-py-service .
-        docker push 300889533047.dkr.ecr.eu-west-1.amazonaws.com/aws-py-service
+        docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+        echo "image=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG" >> $GITHUB_OUTPUT
