--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -10,7 +10,7 @@ env:
   TF_CLOUD_ORGANIZATION: "Imatz"
   TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
   TF_WORKSPACE: "aws-py-service-dev"
-  TF_CONFIG_DIRECTORY: "./terraform/aws"
+  TF_CONFIG_DIRECTORY: "./"
 
 jobs:
   # This workflow contains a single job called "release"
