--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -30,12 +30,20 @@ jobs:
         workspace: ${{ env.TF_WORKSPACE }}
         directory: ${{ env.TF_CONFIG_DIRECTORY }}
 
-    - name: Run Terraform Apply
+    - name: Create Terraform Apply Run
       uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
       id: tf-apply-run
       with:
         workspace: ${{ env.TF_WORKSPACE }}
         configuration_version: ${{ steps.tf-upload.outputs.configuration_version_id }}
+
+    - name: Terraform Apply
+      uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
+      if: fromJSON(steps.tf-apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+      id: tf-apply
+      with: 
+        run: ${{ steps.tf-apply-run.outputs.run_id }}
+        comment: "Apply Run for build ${{ github.sha }}"
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
