--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -11,6 +11,8 @@ env:
   TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
   TF_WORKSPACE: "aws-py-service-dev"
   TF_CONFIG_DIRECTORY: "./"
+  IMAGE_TAG: ${{ github.sha }}
+  TF_VAR_container_image_tag: ${{ github.sha }}
 
 jobs:
   # This workflow contains a single job called "release"
@@ -22,6 +24,27 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: eu-west-1
+    
+    - name: Login to ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+    
+    - name: Build, push to ECR
+      id: build-image
+      env: 
+        ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
+        ECR_REPO: aws-py-service
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
+        echo "image=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Upload Terraform Configuration
       uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
@@ -44,25 +67,3 @@ jobs:
       with: 
         run: ${{ steps.tf-apply-run.outputs.run_id }}
         comment: "Apply Run for build ${{ github.sha }}"
-
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with: 
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: eu-west-1
-    
-    - name: Login to ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-    
-    - name: Build, push to ECR
-      id: build-image
-      env: 
-        ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
-        ECR_REPO: aws-py-service
-        IMAGE_TAG: ${{github.sha}}
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPO:$IMAGE_TAG" >> $GITHUB_OUTPUT
