--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -12,7 +12,7 @@ env:
   TF_WORKSPACE: "aws-py-service-dev"
   TF_CONFIG_DIRECTORY: "./"
   IMAGE_TAG: ${{ github.sha }}
-  TF_VAR_container_image_tag: ${{ github.sha }}
+  TF_VAR_container_image_tag: "${{ github.sha }}"
 
 jobs:
   # This workflow contains a single job called "release"
