Added secrets for TF Vars

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -13,6 +13,10 @@ env:
   TF_CONFIG_DIRECTORY: "./"
   IMAGE_TAG: ${{ github.sha }}
   TF_VAR_container_image_tag: "\"${{ github.sha }}\""
+  TF_VAR_ecs_subnet_1: ${{ secrets.ECS_SUBNET_1 }}
+  TF_VAR_ecs_subnet_2: ${{ secrets.ECS_SUBNET_2 }}
+  TF_VAR_ecs_security_group: ${{ secrets.ecs_security_group }}
+  
 
 jobs:
   # This workflow contains a single job called "release"
