--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -17,6 +17,8 @@ env:
   TF_VAR_ecs_subnet_2: "\"${{ secrets.ECS_SUBNET_2 }}\""
   TF_VAR_ecs_security_group: "\"${{ secrets.ecs_security_group }}\""
   TF_VAR_alb_listener_arn: "\"${{ secrets.alb_listener_arn }}\""
+  TF_VAR_route53_zone_id: "\"${{ secrets.route53_zone_id }}\""
+  TF_VAR_alb_zone_id: "\"${{ secrets.alb_zone_id }}\""
   
 
 jobs:
