--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -19,6 +19,7 @@ env:
   TF_VAR_alb_listener_arn: "\"${{ secrets.alb_listener_arn }}\""
   TF_VAR_route53_zone_id: "\"${{ secrets.route53_zone_id }}\""
   TF_VAR_alb_zone_id: "\"${{ secrets.alb_zone_id }}\""
+  TF_VAR_alb_dns_name: "\"${{ secrets.alb_dns_name }}\""
   
 
 jobs:
