--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -20,6 +20,9 @@ env:
   TF_VAR_route53_zone_id: "\"${{ secrets.route53_zone_id }}\""
   TF_VAR_alb_zone_id: "\"${{ secrets.alb_zone_id }}\""
   TF_VAR_alb_dns_name: "\"${{ secrets.alb_dns_name }}\""
+  TF_VAR_ecs_execution_role_arn: "\"${{ secrets.ecs_execution_role_arn }}\""
+  TF_VAR_ecs_task_role_arn: "\"${{ secrets.ecs_task_role_arn }}\""
+  TF_VAR_ecs_cluster_arn: "\"${{ secrets.ecs_cluster_arn }}\""
   
 
 jobs:
